--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">  
-          <a href="index.html" class="navbar-brand"><span class="navbrandcl"> Todo List</span></a>
+          <a href="index.html" class="navbar-brand" ><span style="color: white;"class="navbrandcl"> Todo List</span></a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
