--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
                 <div class="form-row">
                   <div class="col-lg-7">
                     <label for="email" class="labeltxt pt-2 ">Username</label>
-                    <input type="text" placeholder="Enter Username"  class="form-control m-3 p-3 ms-5" id="uname">
+                    <input type="text" placeholder="admin"  class="form-control m-3 p-3 ms-5" id="uname">
                     <label for="error" id=error></label>
   
                   </div>
                   <div class="form-row">
                     <div class="col-lg-7">
                       <label for="password" class="labeltxt">Password</label>
-                      <input type="password" placeholder="**********" class="form-control m-3 p-3 ms-5" id="pass">
+                      <input type="password" placeholder="12345" class="form-control m-3 p-3 ms-5" id="pass">
                  </div>
                  <div class="form-row">
                   <div class="col-lg-7">
